correct and incorrect variables visible as such, toggle-able, initialzed to only correct

--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -45,6 +45,7 @@ div.read>pre {
 }
 .var-in-incorrect {
 	background-color: #E8DEDE;
+	display: none;
 }
 
 .codeEx {
